--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint",
     "prepare": "husky"
   },
+  "lint-staged": {
+    "*.js": "eslint --fix",
+    "*.ts": "eslint --fix",
+    "*.tsx": "eslint --fix",
+    "*.json": "prettier --write",
+    "*.css": "prettier --write"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@module-federation/nextjs-mf": "^8.8.14",
@@ -41,6 +48,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
